--- a/wiki/bg/Getting_started.html
+++ b/wiki/bg/Getting_started.html
@@ -163,12 +163,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111160856
+Cached time: 20260111214918
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.189 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.328 seconds
 Preprocessor visited node count: 279/1000000
 Post&#8208;expand include size: 8903/2097152 bytes
 Template argument size: 2396/2097152 bytes
@@ -179,19 +179,19 @@ Unstrip post&#8208;expand size: 4553/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.078      1 -total
- 36.04%   10.480      1 Template:Userdocnavi
- 27.01%    7.853      1 Template:Navigation_menu_2
- 13.87%    4.032      1 Template:TOCright
- 11.88%    3.455      1 Template:Caption
- 11.44%    3.327      2 Template:Docnav
-  6.43%    1.870      1 Template:Incode
-  6.19%    1.799      1 Template:Button
-  5.96%    1.732      2 Template:KEY
-  4.86%    1.413      1 Template:Emphasis
+100.00%   45.615      1 -total
+ 37.98%   17.324      1 Template:Userdocnavi
+ 33.82%   15.426      1 Template:Navigation_menu_2
+ 16.82%    7.673      1 Template:Caption
+ 15.78%    7.200      2 Template:Docnav
+ 10.27%    4.684      1 Template:Emphasis
+  8.05%    3.674      1 Template:TOCright
+  4.17%    1.904      1 Template:Button
+  3.24%    1.478      2 Template:KEY
+  2.16%    0.987      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77404-0!canonical and timestamp 20260111160856 and revision id 1734935. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77404-0!canonical and timestamp 20260111214918 and revision id 1734935. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
