--- a/wiki/bg/Installing_additional_components.html
+++ b/wiki/bg/Installing_additional_components.html
@@ -139,12 +139,12 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111140512
+Cached time: 20260111220144
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.120 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.251 seconds
 Preprocessor visited node count: 266/1000000
 Post&#8208;expand include size: 7124/2097152 bytes
 Template argument size: 2145/2097152 bytes
@@ -155,16 +155,16 @@ Unstrip post&#8208;expand size: 3783/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.175      1 -total
- 54.40%    7.711      1 Template:Userdocnavi/bg
- 19.29%    2.734      1 Template:Navigation_menu_2
- 17.74%    2.515      2 Template:Docnav
-  9.31%    1.320      1 Template:Version
-  8.09%    1.147      1 Template:TOCright
-  6.74%    0.955      1 Template:VersionMinus
+100.00%   21.818      1 -total
+ 61.72%   13.465      1 Template:Userdocnavi/bg
+ 20.67%    4.511      1 Template:Navigation_menu_2
+ 12.82%    2.798      1 Template:VersionMinus
+  8.28%    1.807      2 Template:Docnav
+  6.82%    1.487      1 Template:TOCright
+  6.27%    1.367      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77269-0!canonical and timestamp 20260111140512 and revision id 1734095. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77269-0!canonical and timestamp 20260111220144 and revision id 1734095. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
