--- a/wiki/cs/Installing_additional_components.html
+++ b/wiki/cs/Installing_additional_components.html
@@ -12,14 +12,14 @@
 <li><a href="../ro/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--low" title="Instalare (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--low" title="Installing (0% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
-<li><a href="../bg/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--low" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080; (16% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--high" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1100;&#1085;&#1099;&#1093; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1086;&#1074; (81% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--low" title="&#23433;&#35013; (0% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--low" title="&#20184;&#21152;&#27231;&#33021;&#12398;&#12452;&#12531;&#12473;&#12488;&#12540;&#12523; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Installing_additional_components.html" class="mw-pt-progress mw-pt-progress--med" title="&#52628;&#44032; &#44592;&#45733; &#49444;&#52824;&#54616;&#44592; (42% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Instalace v syst&eacute;mu Mac</a></div>
-    <div><a href="../index.php?title=Version_Migration/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Version Migration/cs (page does not exist)">Migrace verz&iacute;</a>
+    <div><a href="../cs/Version_Migration.html" title="Version Migration/cs">Migrace verz&iacute;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
@@ -31,7 +31,7 @@
 </p><p><span id="Help_files"></span>
 </p>
 <h1><span id="Soubory_n.C3.A1pov.C4.9Bdy"></span><span class="mw-headline" id="Soubory_n&aacute;pov&#283;dy">Soubory n&aacute;pov&#283;dy</span></h1>
-<p>See <a href="../index.php?title=Installing_Helpfile/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing Helpfile/cs (page does not exist)">Instalace souboru n&aacute;pov&#283;dy</a>.
+<p>See <a href="../cs/Installing_Helpfile.html" title="Installing Helpfile/cs">Instalace souboru n&aacute;pov&#283;dy</a>.
 </p><p><span id="External_workbenches"></span>
 </p>
 <h1><span id="Extern.C3.AD_pracovn.C3.AD_prost.C5.99ed.C3.AD"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_prost&#345;ed&iacute;">Extern&iacute; pracovn&iacute; prost&#345;ed&iacute;</span></h1>
@@ -125,7 +125,7 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
 <div class="mw-translate-fuzzy">
 <p>{{Docnav
 |<a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Instalace v syst&eacute;mu Mac</a>
-|<a href="../index.php?title=Version_Migration/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Version Migration/cs (page does not exist)">Migrace verz&iacute;</a>
+|<a href="../cs/Version_Migration.html" title="Version Migration/cs">Migrace verz&iacute;</a>
 </p>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -133,7 +133,7 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a class="mw-selflink selflink">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
@@ -144,32 +144,32 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111094305
+Cached time: 20260111213913
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.126 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 6617/2097152 bytes
 Template argument size: 2097/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3767/5000000 bytes
+Unstrip post&#8208;expand size: 3821/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.623      1 -total
- 54.24%    8.474      1 Template:Userdocnavi/cs
- 19.56%    3.056      1 Template:Navigation_menu_2
- 11.14%    1.740      1 Template:VersionMinus
- 11.10%    1.734      1 Template:Docnav
- 10.04%    1.568      1 Template:TOCright
-  9.02%    1.409      1 Template:Version
+100.00%   10.755      1 -total
+ 41.28%    4.440      1 Template:Userdocnavi/cs
+ 26.03%    2.799      1 Template:VersionMinus
+ 17.47%    1.879      1 Template:Navigation_menu_2
+ 14.04%    1.510      1 Template:Docnav
+  7.34%    0.790      1 Template:TOCright
+  7.31%    0.786      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260111094305 and revision id 1732615. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260111213913 and revision id 1732615. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
